--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
+    "class-variance-authority": "^0.7.1",
     "js-cookie": "^3.0.5",
     "motion": "^11.15.0",
     "next": "15.1.1",
