--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "motion": "^11.15.0",
     "next": "15.1.1",
