--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev --turbopack -p 1007",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "tsc --noEmit --diagnostics"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.64.2",
